k8s/websocket/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: websocket
spec:
  replicas: 1
  selector:
    matchLabels:
      app: websocket
  template:
    metadata:
      labels:
        app: websocket
    spec:
      containers:
      - name: chat-app-websocket
        image: noorullah43/chatappingo-websocket:latest
        ports:
        - containerPort: 8080
