k8s/websocket/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: websocket
spec:
  selector:
    app: websocket
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
