k8s/websocket/websocket-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: websocket-ingress
spec:
  rules:
    - host: chatappwebsocket.local
      http:
        paths:
          - path: /ws
            pathType: Prefix
            backend:
            service:
                name: websocket
                port:
                  number: 8080
